Dna `grow` refactor